--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Brittney DeWitt Personal Website</title>
+    <link rel="stylesheet" href="website.css">
 </head>
 <body>
-    
+    <div class="top">
+        <a href="./index.html"> Home</a>
+        <a href="./aboutme.html"> About me </a>
+        <a href="./portfolio.html"> Portfolio</a>
+    </div>
+
 </body>
 </html>
