--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <a href="./aboutme.html"> About me </a>
         <a href="./portfolio.html"> Portfolio</a>
     </div>
-
+<img src="https://ca.slack-edge.com/E05LYDFST6K-U064TFDM3A9-50f6c7f0c3c7-512"/>
 </body>
 </html>
