--- a/about.html
+++ b/about.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     
+<p>As a new mom with a background in leadership, I bring a unique perspective to the coding world. The patience, resilience, and organizational skills I developed as a leader are proving to be invaluable as I tackle coding projects and navigate the learning curve. I'm passionate about leveraging technology to create positive change and am excited to contribute my skills to the dynamic and innovative field of coding.</p>
+
 </body>
 </html>
