--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="top">
         <a href="./index.html"> Home</a>
-        <a href="./aboutme.html"> About me </a>
+        <a href="./aboutme.html" target="_blank"> About me </a>
         <a href="./portfolio.html"> Portfolio</a>
     </div>
-<img src="https://ca.slack-edge.com/E05LYDFST6K-U064TFDM3A9-50f6c7f0c3c7-512"/>
+<div><img src="https://ca.slack-edge.com/E05LYDFST6K-U064TFDM3A9-50f6c7f0c3c7-512"/></div>
 </body>
 </html>
