--- a/about.html
+++ b/about.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     
+<p>Hello there! I'm thrilled to share a little bit about myself. I'm a proud new mom navigating the exciting and challenging journey of parenthood. My days are filled with adorable baby giggles, diaper changes, and the joy of watching my little one grow and explore the world.
+
+    In addition to my role as a mom, I bring a wealth of leadership experience to the table. Before diving into the world of coding, I held various leadership positions where I honed my skills in strategic planning, team collaboration, and project management. The fast-paced nature of leadership roles has equipped me with the ability to stay calm under pressure and find innovative solutions to complex problems.</p>
+    <p>My journey into coding is a recent and invigorating chapter in my life. Eager to embrace new challenges and stay ahead in the ever-evolving tech landscape, I decided to explore the world of programming. Learning to code has been a fascinating experience, and I'm enjoying the process of unraveling the intricacies of languages and algorithms.</p>
 <p>As a new mom with a background in leadership, I bring a unique perspective to the coding world. The patience, resilience, and organizational skills I developed as a leader are proving to be invaluable as I tackle coding projects and navigate the learning curve. I'm passionate about leveraging technology to create positive change and am excited to contribute my skills to the dynamic and innovative field of coding.</p>
 
 </body>
