--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <a href="./portfolio.html"> Portfolio</a>
     </div>
 <div><img src="https://ca.slack-edge.com/E05LYDFST6K-U064TFDM3A9-50f6c7f0c3c7-512"/></div>
+<h2>Leader, Problem Solver, Developer</h2>
 </body>
 </html>
