--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
     </div>
 <div><img src="https://ca.slack-edge.com/E05LYDFST6K-U064TFDM3A9-50f6c7f0c3c7-512"/></div>
 <h2>Leader, Problem Solver, Developer</h2>
+
+
+
+<div class="quote"> <h1>We keep moving forward, opening new doors, and doing new things, because we're curious and curiousity keeps leading us </h1></div>
 </body>
 </html>
